--- a/Analyse/计算模拟全局认识.md
+++ b/Analyse/计算模拟全局认识.md
@@ -7,6 +7,12 @@
 [斯坦福哲学百科全书-科学模拟](https://plato.stanford.edu/entries/simulations-science/)
 [计算模拟_wiki](https://en.wikipedia.org/wiki/Computer_simulation)
 
+
+## 关键学者
+
+冯·诺依曼
+西蒙
+
 ## 期刊
 
 
@@ -20,6 +26,7 @@
 
 ## 论文
 
+https://link.springer.com/article/10.1007/s00048-019-00227-6
 
 1999. “Sanctioning Models: The Epistemology of Simulation,” Science in Context, 12(3): 275–92.
 1999。“制裁模型：模拟的认识论”，《科学背景》，12(3)：275-92。
